[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "piranha"
dynamic = ["version"]
dependencies = [
    "mako==1.2",
    "pandas~=1.5",
    "snipit>=1.2",
    "biopython",
    "medaka~=1.12.0",
    "numpy~=1.26.4",
    "scipy~=1.11"
]
authors = [
    {name = "Aine OToole", email = "aine.otoole@ed.ac.uk"}
]
description = "Poliovirus Investigation Resource Automating Nanopore Haplotype Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/polio-nanopore/piranha"

[tool.setuptools]
packages = ["piranha", "piranha.scripts"]

[tool.setuptools.package-data]
myModule = ["data/*"]

[project.scripts]
piranha = "piranha.command:main"

[tool.setuptools.dynamic]
version = {attr = "piranha.__version__"}

