[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "piranha"
dynamic = ["version"]
dependencies = [
    "mako==1.2",
    "pandas",
    "snipit>=1.2",
    "numpy",
    "scipy"
]
authors = [
    {name = "Aine OToole", email = "aine.otoole@ed.ac.uk"}
]
description = "Poliovirus Investigation Resource Automating Nanopore Haplotype Analysis"
readme = "README.md"
requires-python = "~=3.12"
license = "GPL-3.0-or-later"

[project.urls]
Homepage = "https://github.com/polio-nanopore/piranha"

[tool.setuptools]
packages = ["piranha", "piranha.scripts", "piranha.input_parsing", "piranha.analysis", "piranha.utils", "piranha.data", "piranha.report"]
include-package-data = true

[tool.setuptools.package-data]
piranha = ["data/*", "scripts/*.smk"]

[project.scripts]
piranha = "piranha.command:main"

[tool.setuptools.dynamic]
version = {attr = "piranha.__version__"}

